// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser foreach loops allows 'next' to terminate loop 1`] = `
Array [
  ForEach {
    "body": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [],
    },
    "item": Object {
      "isReserved": false,
      "kind": 29,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "word",
    },
    "target": Variable {
      "name": Object {
        "isReserved": false,
        "kind": 29,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "lipsum",
      },
    },
    "tokens": Object {
      "endFor": Object {
        "isReserved": true,
        "kind": 74,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "next",
      },
      "forEach": Object {
        "isReserved": false,
        "kind": 64,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "for each",
      },
      "in": Object {
        "isReserved": false,
        "kind": 29,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "in",
      },
    },
  },
]
`;

exports[`parser foreach loops requires a name and target 1`] = `
Array [
  ForEach {
    "body": Block {
      "startingLocation": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [],
    },
    "item": Object {
      "isReserved": false,
      "kind": 29,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "word",
    },
    "target": Variable {
      "name": Object {
        "isReserved": false,
        "kind": 29,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "lipsum",
      },
    },
    "tokens": Object {
      "endFor": Object {
        "isReserved": false,
        "kind": 54,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end for",
      },
      "forEach": Object {
        "isReserved": false,
        "kind": 64,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "for each",
      },
      "in": Object {
        "isReserved": false,
        "kind": 29,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "in",
      },
    },
  },
]
`;
